# AiAssetBrowser

./: .gitignore  AssetBrowserPanel.cpp  AssetBrowserPanel.h  CMakeLists.txt  Duck.qml  HistoryUtils.cpp  HistoryUtils.h  MetadataUtils.cpp  MetadataUtils.h  ModelPreviewWidget.cpp  ModelPreviewWidget.h  ModelViewer.qml  README.md  TagEditorPanel.cpp  TagEditorPanel.h  TestModelViewer.qml  mainwindow.cpp  mainwindow.h  resources.qrc
PythonScripts/: extract_tag_stats.py  generate_metadata_files.py  populate_fake_metadata.py  sketchfab_downloader.py  suggest_tags.py  tag_stats.json
meshes/: lod3spShape_mesh.mesh
